[package]
edition = "2018"
name = "turbocard_server"
version = "0.1.0"

[dependencies]
anyhow = "1"
futures-util = {version = "0.3", default-features = false, features = ["async-await", "sink", "std"]}
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.14"
